# pit2sop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/pit2sop-cli/: Cargo.toml
crates/pit2sop-cli/src/: main.rs
crates/pit2sop-core/: Cargo.toml
crates/pit2sop-core/src/: ai.rs  app.rs  config.rs  db.rs  lib.rs  markdown.rs  matcher.rs  models.rs
examples/: config.toml  secrets.toml.example
pit2sop_docs/: ARCHITECTURE.md  README.md  desktop-smoke-checklist.md  dogfood-log.md  macos-signing-notarization.md  product-north-star.md  release-artifacts.md  spec.md
