[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/pit2sop-core",
    "crates/pit2sop-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0-beta.1"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
toml = "0.9"
walkdir = "2.5"
